--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
+
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-NLL4F7CS');</script>
+  <!-- End Google Tag Manager -->
+
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Primary Meta Tags -->
-    <title>PDFmaster - Bilder zu PDF Konverter | JPG zu PDF | Kostenlos Online</title>
+    <title>Mehrere Bilder zu PDF | Schneller Konverter | Kostenlos & Sicher</title>
     <meta name="title" content="PDFmaster - Bilder zu PDF Konverter | JPG zu PDF | Kostenlos Online" />
     <meta name="description" content="Kostenloser Online-Konverter zum Umwandeln von Bildern (JPG, PNG, JPEG) in PDF. Einfach, schnell und sicher - keine Registrierung erforderlich. Mehrere Bilder in ein PDF zusammenführen." />
     
@@ -28,6 +37,10 @@
     <meta property="twitter:image" content="[YOUR-WEBSITE-PREVIEW-IMAGE]" />
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NLL4F7CS"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
